--- a/.github/workflows/push-checks.yml
+++ b/.github/workflows/push-checks.yml
@@ -24,3 +24,9 @@ jobs:
         run: python -m pip install pre-commit
       - name: Run Pre-Commit
         run: pre-commit run --all-files
+
+  complexity-badge:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: DSD-DBS/py-capellambse/ci-templates/github/model-complexity-badge@master
